--- a/latex/Thesis/prelude.tex
+++ b/latex/Thesis/prelude.tex
@@ -15,7 +15,7 @@
 
 % TITLE PAGE
 %   - define \title{} \author{} \date{}
-\title{Cryptanalysis of round-reduced \KECCAK{}}
+\title{Cryptanalysis of Round-Reduced \KECCAK{}}
 \author{Nikhil Mittal}
 \date{June, 2019}
 
@@ -44,7 +44,7 @@
 \department{Computer Science \& Engineering}
 
 %    - Set the guide's name
-\setguide{Prof Shashank Singh}
+\setguide{Prof. Manindra Agrawal and Dr. Shashank Singh}
 \setguidedept{Department of Computer Science \& Engineering}
 
 %   - once the above are defined, use \maketitle to generate the titlepage
