--- a/latex/Thesis/technical.tex
+++ b/latex/Thesis/technical.tex
@@ -1,5 +1,7 @@
-\chapter{\KECCAK{}}
+\chapter{A Background on \KECCAK{}}
 \label{chap:design-impl}
+
+In this chapter we discuss details of the construction of \KECCAK{} and its standardization \SHA-$3$.
 
 \section{\Keccak{} Description and Notations}
 \Keccak{} is a family of sponge hash functions with arbitrary output length. A sponge construction consists of a permutation function, denoted by $f$, a parameter ``rate'', denoted by $r$, and a padding rule ${pad}$. The construction 
